--- a/app/22busscustomer/views/applyuserlist.html
+++ b/app/22busscustomer/views/applyuserlist.html
@@ -20,7 +20,7 @@
           <a ng-show="obj.state == 0" ng-click="agree(obj.id)" class="btn btn-danger btn-xs">同意</a>
           <a ng-show="obj.state == 0" ng-click="disagree(obj.id)" class="btn btn-warning btn-xs">不同意</a>
           <a ng-show="obj.state == 1" ng-click="creatactivity(obj.id)" class="btn btn-success btn-xs">发布活动</a>
-          <a ng-show="obj.state == 2" class="btn btn-info btn-xs">未通过</a>
+          <!-- <a ng-show="obj.state == 2" class="btn btn-info btn-xs">未通过</a> -->
         </td>
       </tr>
     </tbody>
