--- a/app/22busscustomer/views/change.html
+++ b/app/22busscustomer/views/change.html
@@ -8,7 +8,7 @@
 	    	<button type="button" class="btn btn-info" ng-click="changeapplylist()" style="width:100%;">易卖申请列表<button>
 	    </div>		
 		<div class="form-group">
-	    	<button type="button" class="btn btn-info" ng-click="addgoods()" style="width:100%;">添加商品到为你推荐<button>
+	    	<button type="button" class="btn btn-info" ng-click="addgoods()" style="width:100%;">商品列表<button>
 	    </div>
 		<div class="form-group">
 	    	<button type="button" class="btn btn-info" ng-click="addgoodtype()" style="width:100%;">添加商品类别<button>
