--- a/app/22busscustomer/views/addinstruction.html
+++ b/app/22busscustomer/views/addinstruction.html
@@ -10,7 +10,7 @@
   <label for="inputDate" class="col-sm-4 control-label">说明标识</label>
   <div class="col-md-6">
   <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="userinfo.mobile"
+      ng-model="saveinfo.title_identifier"
       >
   </div>    
  </div>
@@ -19,20 +19,20 @@
  <label for="inputDate" class="col-sm-4 control-label">说明标题</label>
  <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="userinfo.company_code"
+      ng-model="saveinfo.title"
       >
  </div>    
  </div>
 
   <div class="form-group">
-  <label for="inputDate" class="col-sm-4 control-label">备注</label>
+  <label for="inputDate" class="col-sm-4 control-label">说明内容</label>
   <div class="col-sm-6">
-  <textarea class="form-control col-sm-2" cols="30" rows="20" ng-model="userinfo.remarks"></textarea>
+  <textarea class="form-control col-sm-2" cols="30" rows="20" ng-model="saveinfo.explain_content"></textarea>
   </div>
  </div>
  <div>
  
-  <button type="button" class="col-md-2 col-md-offset-6 btn btn-primary" ng-click="saveinstruction()">保存</button>
+  <button ng-show="title_identifier == undefined" type="button" class="col-md-2 col-md-offset-6 btn btn-primary" ng-click="saveinstruction()">保存</button>
  </div>
 
 </div>
