--- a/app/22busscustomer/views/charitylist.html
+++ b/app/22busscustomer/views/charitylist.html
@@ -3,25 +3,30 @@
     <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-2 text-center">操作人姓名</th>
-        <th class="col-md-2 text-center">操作人手机</th>
-        <th class="col-md-2 text-center">活动编号</th>
-        <th class="col-md-2 text-center">支出物品数量</th>
-        <th class="col-md-2 text-center">备注</th>
+        <th class="col-md-1 text-center">捐助人姓名</th>
+        <th class="col-md-2 text-center">捐助人身份证号码</th>
+        <th class="col-md-1 text-center">捐助人手机号</th>
+        <th class="col-md-1 text-center">物品标题</th>
+        <th class="col-md-1 text-center">物品数量</th>
+        <th class="col-md-2 text-center">物品详情</th>
+        <th class="col-md-1 text-center">审核状态</th>
+        <th class="col-md-1 text-center">捐赠状态</th>
         <th class="col-md-2 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
-        <td class="text-center">{{obj.insert_user_name}}</td>
-        <td class="text-center">{{obj.insert_user_mobile}}</td>
-        <td class="text-center">{{obj.activity_id}}</td>
-        <td class="text-center">{{objobjects_num}}</td>
-        <td class="text-center">{{obj.sremark}remark}</td>
+         <td class="text-center">{{obj.ronation_user_name}}</td>
+        <td class="text-center">{{obj.ronation_user_card}}</td>
+        <td class="text-center">{{obj.ronation_user_mobile}}</td>
+        <td class="text-center">{{obj.ronation_goods_title}}</td>
+        <td class="text-center">{{obj.ronation_goods_number}}</td>
+        <td class="text-center">{{obj.ronation_goods_info}}</td>
+        <td class="text-center">{{obj.ronation_state}}</td>
+        <td class="text-center">{{obj.ronation_time}}</td>
         <td class="text-center">
-          <a ng-show="" ng-click="agree(obj.id)" class="btn btn-danger btn-xs">通过</a>
-          <a ng-show="" ng-click="agree(obj.id)" class="btn btn-danger btn-xs">不通过</a>
-          <a ng-show="" ng-click="agree(obj.id)" class="btn btn-danger btn-xs">已上架</a>
+          <a ng-show="obj.ronation_state == 0" ng-click="agree(obj.love_record_id)" class="btn btn-danger btn-xs">通过</a>
+          <a ng-show="obj.ronation_state == 0" ng-click="disagree(obj.love_record_id)" class="btn btn-info btn-xs">不通过</a>
         </td>
       </tr>
     </tbody>
