--- a/app/22busscustomer/views/goodsforyou.html
+++ b/app/22busscustomer/views/goodsforyou.html
@@ -1,29 +1,47 @@
-<div class="col-xs-6 col-xs-offset-3" >
-<div class="panel panel-default">
-	<div class="panel-heading text-center">添加商品</div>
-<div class="panel-body">
-<div class="container-fluid form-horizontal ">
-	<div class="col-xs-12 form-horizontal" >
-	    <!-- <div class="form-group">
-	    	<button type="button" class="btn btn-info" ng-click="changeapplylist()" style="width:100%;">易卖申请列表<button>
-	    </div>		
-		<div class="form-group">
-	    	<button type="button" class="btn btn-info" ng-click="addgoods()" style="width:100%;">添加商品到为你推荐<button>
-	    </div>
-		<div class="form-group">
-	    	<button type="button" class="btn btn-info" ng-click="lovedonateapply()" style="width:100%;">添加商品类别<button>
-	    </div> -->
-	    <div class="form-group">
-		<label class="col-xs-3 control-label">商品详情编号:</label>
-		<div class="col-xs-7">
-			<input type="text" class="form-control" 
-			ng-model="info.goods_id"
-			>
-		</div>
-		<button type="button" class="btn btn-info" ng-click="savegoodforyou()">确定<button>
-		</div>
-	</div>
+<div class="col-sm-12">
+<div class="col-md-12 panel panel-default table-responsive">
+    <table class="table table-bordered">
+    <thead>
+      <tr>
+        <th class="col-md-2 text-center">商品名称</th>
+        <th class="col-md-1 text-center">新旧程度</th>
+        <th class="col-md-1 text-center">区域</th>
+        <th class="col-md-2 text-center">原价</th>
+        <th class="col-md-2 text-center">现价</th>
+        <th class="col-md-2 text-center">备注</th>
+        <th class="col-md-2 text-center">操作</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr ng-repeat="obj in objs">
+        <td class="text-center">{{obj.goods_title}}</td>
+        <td class="text-center">{{obj.goods_new_degree}}</td>
+        <td class="text-center">{{obj.trade_area}}</td>
+        <td class="text-center">{{obj.goods_price_before}}</td>
+        <td class="text-center">{{obj.goods_price}}</td>
+        <td class="text-center">{{obj.remark}}</td>
+        <td class="text-center">
+          <a ng-click="add(obj.goods_id)" class="btn btn-info btn-xs">添加到为你推荐</a>
+        </td>
+      </tr>
+    </tbody>
+    </table>
 </div>
-</div>
+
+<div class="text-right">
+    <uib-pagination 
+      total-items="bigTotalItems" 
+      ng-model="bigCurrentPage" 
+      max-size="maxSize" 
+      class="pagination-sm" 
+      boundary-links="true" 
+      ng-change="getlist()"
+      items-per-page="itemsPerPage"
+      previous-text="上一页"
+      next-text="下一页"
+      first-text="首页"
+      last-text="末页"
+      rotate="false">
+    </uib-pagination>
 </div>
 </div>
