--- a/app/22busscustomer/views/instructionlist.html
+++ b/app/22busscustomer/views/instructionlist.html
@@ -3,20 +3,21 @@
     <table class="table table-bordered">
     <thead>
       <tr>
-        <th class="col-md-3 text-center">说明标识</th>
-        <th class="col-md-3 text-center">说明标题</th>
-        <th class="col-md-3 text-center">说明内容</th>
-        <th class="col-md-3 text-center">操作</th>
+        <th class="col-md-4 text-center">说明标识</th>
+        <th class="col-md-4 text-center">说明标题</th>
+        <!-- <th class="col-md-3 text-center">说明内容</th> -->
+        <th class="col-md-4 text-center">操作</th>
       </tr>
     </thead>
     <tbody>
       <tr ng-repeat="obj in objs">
         <td class="text-center">{{obj.title_identifier}}</td>
         <td class="text-center">{{obj.title}}</td>
-        <td class="text-center">{{obj.explain_content}}</td>
+        <!-- <td class="col-md-3 text-center">{{obj.explain_content}}</td> -->
         <td class="text-center">
           <a ng-click="change(obj.id)" class="btn btn-info btn-xs">修改</a>
           <a ng-click="delete(obj.id)" class="btn btn-info btn-xs">删除</a>
+          <a ng-click="detail(obj.id,obj.title_identifier)" class="btn btn-info btn-xs">查看详情</a>
         </td>
       </tr>
     </tbody>
