--- a/app/22busscustomer/views/loveactionapply.html
+++ b/app/22busscustomer/views/loveactionapply.html
@@ -9,8 +9,11 @@
  <div class="form-group">
    <label for="inputDate" class="col-md-4 control-label">募捐类型：</label>
    <div class="col-md-6">
-   <select class="form-control" ng-model="searchinfo"  ng-options ="obj as obj.name for obj in objs" ng-change="selection(searchinfo)">
+   <select class="form-control" ng-model="info.active_type" ng-change="selection(info.active_type)">
    <option value="">请选择</option>
+   <option value="0">钱</option>
+   <option value="1">物</option>
+   <option value="2">钱+物</option>
    </select>
    </div>    
  </div>
@@ -19,7 +22,7 @@
   <label for="inputDate" class="col-sm-4 control-label">求援人姓名：</label>
   <div class="col-md-6">
   <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="userinfo.mobile"
+      ng-model="info.activity_proposer_name"
       >
   </div>    
  </div>
@@ -28,7 +31,7 @@
  <label for="inputDate" class="col-sm-4 control-label">求援人证件号：</label>
  <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="userinfo.company_code"
+      ng-model="info.activity_proposer_card"
       >
  </div>    
  </div>
@@ -37,7 +40,7 @@
  <label for="inputDate" class="col-sm-4 control-label">求援人手机号：</label>
  <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="userinfo.start_card_no">
+      ng-model="info.activity_proposer_mobile">
  </div>
  </div>
 
@@ -45,7 +48,41 @@
  <label for="inputDate" class="col-sm-4 control-label">求援标题：</label>
  <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="userinfo.start_card_no">
+      ng-model="info.activity_titlle">
+ </div>
+ </div>
+
+ <div class="form-group">
+ <label for="inputDate" class="col-sm-4 control-label">求援主图片：</label>
+ <div class="col-md-6">
+      <img ng-src="{{info.activity_main_picture}}" width="100%" height="200" ng-model="info.activity_main_picture">
+        <input type="file" nv-file-select uploader="uploader" / ng-hide="hide===true" ><br/>
+        <ul class="list-group">
+          <li class="list-group-item" ng-repeat="item in uploader.queue">
+            文件名: <span ng-bind="item.file.name"></span>
+            <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
+            <div class="progress mt10">
+              <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader.progress + '%' }"></div>
+            </div>
+          </li>
+        </ul>
+ </div>
+ </div>
+
+ <div class="form-group">
+ <label for="inputDate" class="col-sm-4 control-label">求援副图片：</label>
+ <div class="col-md-6">
+      <img ng-src="{{info.activity_picture}}" width="100%" height="200" ng-model="info.activity_picture">
+        <input type="file" nv-file-select uploader="uploader1" / ng-hide="hide===true" ><br/>
+        <ul class="list-group">
+          <li class="list-group-item" ng-repeat="item in uploader1.queue">
+            文件名: <span ng-bind="item.file.name"></span>
+            <button type="button" class="btn btn-default btn-xs"  ng-click="item.upload()"><span class="glyphicon glyphicon-upload"></span> 上传</button>
+            <div class="progress mt10">
+              <div class="progress-bar" role="progressbar" ng-style="{ 'width': uploader1.progress + '%' }"></div>
+            </div>
+          </li>
+        </ul>
  </div>
  </div>
 
@@ -54,50 +91,53 @@
  <label for="inputDate" class="col-sm-4 control-label">求援详情：</label>
  <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname"
-      ng-model="userinfo.unit_price"
+      ng-model="info.activity_info"
       >
  </div>    
  </div>
 
  
- <div class="form-group">
+ <div ng-show="info.active_type=='' || info.active_type==0 || info.active_type==2" class="form-group">
  <label for="inputDate" class="col-sm-4 control-label">预计募捐金额：</label>
  <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="userinfo.card_giveout_target"
+      ng-model="info.activity_estimate_rmb"
       >
  </div>    
  </div>
 
- <div class="form-group">
-  <label for="inputDate" class="col-sm-4 control-label">实际募捐金额：</label>
+ <div ng-show="info.active_type=='' || info.active_type==1 || info.active_type==2" class="form-group">
+  <label for="inputDate" class="col-sm-4 control-label">预计募捐物品件数：</label>
   <div class="col-md-6">
  <input type="text" class="form-control" id="inputpoolname" placeholder=""
-      ng-model="userinfo.card_giveout_target"
+      ng-model="info.activity_estimate_num"
       >
  </div>
  </div>
 
-  <div class="form-group">
+ <div class="form-group">
       <label for="inputDate" class="col-sm-4 control-label">活动开启时间：</label>
-      <div class="input-group col-sm-5">
+      <div class="col-md-6">
+        <div class="input-group col-sm-12">
         <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.start.date" is-open="section.start.opened" ng-required="true" close-text="Close" readonly/>
         <span class="input-group-btn">
           <button type="button" class="btn btn-default" ng-click="open(section.start)"><i class="glyphicon glyphicon-calendar"></i></button>
         </span>
-       </div>                 
-  </div>
-
-
+       </div>
+      </div>
+ </div>
+      
  <div class="form-group">
       <label for="inputDate" class="col-sm-4 control-label">活动结束时间：</label>
-      <div class="input-group col-sm-5">
-          <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
-          <span class="input-group-btn">
+      <div class="col-md-6">
+        <div class="input-group col-sm-12">
+        <input type="text" class="form-control" uib-datepicker-popup="yyyy-MM-dd" ng-model="section.end.date" is-open="section.end.opened" ng-required="true" close-text="Close" readonly/>
+        <span class="input-group-btn">
           <button type="button" class="btn btn-default" ng-click="open(section.end)"><i class="glyphicon glyphicon-calendar"></i></button>
-          </span>
-      </div>            
-  </div>
+        </span>
+       </div>
+      </div>
+ </div>
 
  <div>
   <button type="button" class="col-md-1 col-md-offset-6 btn btn-primary" ng-click="saveactivity()">保存</button>
