--- a/app/14statistics/views/staticonline.html
+++ b/app/14statistics/views/staticonline.html
@@ -40,6 +40,9 @@
 		            </div>
 	              	&nbsp;&nbsp;
 	              	<button type="button" class="btn btn-default search" ng-click="load()">立即搜索</button>
+	              	<div class="input-group pull-right">
+	              		总卡数：{{card_sum}}
+	              	</div>
 	            </div>
 	        </div>
 	    </div>
