--- a/app/22busscustomer/views/voucherinfo.html
+++ b/app/22busscustomer/views/voucherinfo.html
@@ -25,7 +25,7 @@
               <tr ng-repeat="obj in objs">
                 <td class="text-center">{{obj.code}}</td>
                 <td class="text-center">
-                  <span ng-show="{{obj.used == '0'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
+                  <span ng-show="{{obj.used == '0' || obj.used == '2'}}" class="glyphicon glyphicon-ok text-success" aria-hidden="true"></span>
                   <span ng-show="{{obj.used == '1'}}" class="glyphicon glyphicon-remove text-danger" aria-hidden="true"></span>
                 </td>
                 <td class="text-center">
