'修改一元券订单'

--- a/app/22busscustomer/views/voucherorderinfo.html
+++ b/app/22busscustomer/views/voucherorderinfo.html
@@ -29,7 +29,7 @@
         </div>
 
         <div class="form-group">
-            <label class="col-xs-6 control-label">订单状态</label>
+            <label class="col-xs-6 control-label">支付状态</label>
             <div class="col-xs-6">
                 <p class="form-control-static">{{obj.statename}}</p>
             </div>
