--- a/app/22busscustomer/views/voucherorderlist.html
+++ b/app/22busscustomer/views/voucherorderlist.html
@@ -42,11 +42,10 @@
                   </div>
                   &nbsp;&nbsp;&nbsp;&nbsp;
 
-                  <label class="control-label">订单状态：</label>
+                  <label class="control-label">支付状态：</label>
                   <select class="form-control" ng-model="searchform.pay_state">
                     <option label="未支付" value="0"></option>
                     <option label="已支付" value="1"></option>
-                    <option label="已过期" value="2"></option>
                     <option label="查询全部" value=""></option>
                   </select>
                   &nbsp;&nbsp;&nbsp;&nbsp;
