--- a/app/22busscustomer/views/instructionlist.html
+++ b/app/22busscustomer/views/instructionlist.html
@@ -1,4 +1,17 @@
 <div class="col-sm-12">
+<div class="panel panel-default">
+    <div class="panel-body">
+        <div class="form-group form-inline">
+            <div class="col-sm-12">
+                  <label for="inputLottry" class="control-label">说明列表</label>
+                  <button type="button" class="btn btn-primary search pull-right" ng-click="addinstruction()">添加说明</button>
+
+
+            </div>
+        </div>
+    </div>
+</div>
+
 <div class="col-md-12 panel panel-default table-responsive">
     <table class="table table-bordered">
     <thead>
