'一元券订单去掉分页'

--- a/app/22busscustomer/views/usedorderlist.html
+++ b/app/22busscustomer/views/usedorderlist.html
@@ -100,7 +100,7 @@
   </table>
 
 
-  <div class="text-right">
+  <!--<div class="text-right">
 
     <uib-pagination 
       total-items="bigTotalItems" 
@@ -117,7 +117,7 @@
       rotate="false">
     </uib-pagination>
 
-  </div>
+  </div> -->
   
 
 </div>
