--- a/app/22busscustomer/views/voucherorderlist.html
+++ b/app/22busscustomer/views/voucherorderlist.html
@@ -99,7 +99,7 @@
   </table>
 
 
-  <div class="text-right">
+  <!--<div class="text-right">
 
     <uib-pagination 
       total-items="bigTotalItems" 
@@ -116,7 +116,7 @@
       rotate="false">
     </uib-pagination>
 
-  </div>
+  </div> -->
   
 
 </div>
