--- a/app/22busscustomer/views/goodsforyou.html
+++ b/app/22busscustomer/views/goodsforyou.html
@@ -29,7 +29,7 @@
         
         <td class="text-center">
           <a ng-show="obj.foryoustate!=0" ng-click="add(obj.goods_id)" class="btn btn-info btn-xs">添加到为你推荐</a>
-          <a ng-show="obj.foryoustate==0" ng-click="console(obj.id)" class="btn btn-success btn-xs">取消</a>
+          <a ng-show="obj.foryoustate==0" ng-click="console(obj.goods_id)" class="btn btn-success btn-xs">取消</a>
         </td>
       </tr>
     </tbody>
