--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -659,6 +659,60 @@
 </div>
 
 
+<div class="col-xs-12" ng-show="funobj.hasOwnProperty('shangke_price')" >
+	<div class="panel panel-default form-horizontal">
+		<div class="panel-heading">
+			销售品分润设置<button type="button" 
+				class="btn btn-xs btn-info pull-right"
+				ng-show="what == 'edit' || saleobj.id == ''"
+				ng-click="saleFrSetSave()"
+			>
+				<span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+			</button>
+		</div>
+		<div class="panel-body">
+			<div class="container-fluid">
+				<div class="col-xs-12" >
+					<!--<div class="col-xs-1"></div>-->
+					<div class="col-xs-2">
+						<label for="fxbt" class="pull-right text-right mt10">分享标题&nbsp;&nbsp;&nbsp;&nbsp;</label>
+					</div>
+					<div class="col-xs-8">
+						<input type="text" name="fxbt" class="form-control form-inline" placeholder="分享标题" ng-model="salefrobj.share_title" />
+					</div>
+				</div>
+					<br/>
+					<br/>
+				<div class="col-xs-12" >
+					<!--<div class="col-xs-1"></div>-->
+					<div class="col-xs-2">
+						<label for="lrl" class="pull-right text-right mt10">利润率&nbsp;&nbsp;&nbsp;&nbsp;</label>
+					</div>
+					<div class="col-xs-2 text-right">
+						<input type="number" min="0" max="100" name="lrl" class="form-control" placeholder="利润率" ng-model="salefrobj.profit_ratio" />
+					</div>
+					<div class="col-xs-1 mt10">(%)</div>
+					
+					
+					      <!--<tr>
+					        <th class="col-md-6 text-center">分享标题</th>
+					        <th class="col-md-4 text-center">利润率(%)</th>
+					      </tr>
+					      <tr>
+					        <td class="text-center" ng-model="salefrobj.share_title">
+								<input type="text" class="form-control" placeholder="分享标题" ng-model="salefrobj.share_title" />
+							</td>
+					        <td class="text-center" ng-model="salefrobj.profit_ratio">
+								<input type="number" class="form-control" placeholder="利润率" ng-model="salefrobj.profit_ratio" />
+							</td>
+					      </tr>-->
+				</div>
+			</div>
+		</div>
+	</div>
+</div>
+
+
 
 
 <div class="col-xs-12 " ng-show="funobj.hasOwnProperty('govsubsidy')">
