--- a/app/22busscustomer/views/addheadline.html
+++ b/app/22busscustomer/views/addheadline.html
@@ -17,6 +17,15 @@
  </div>
 
  <div class="form-group">
+  <label for="inputDate" class="col-sm-4 control-label">超链接：</label>
+  <div class="col-md-6">
+  <input type="text" class="form-control" id="inputpoolname" placeholder=""
+      ng-model="info.url"
+      >
+  </div>    
+ </div>
+
+ <!-- <div class="form-group">
  <label for="inputDate" class="col-sm-4 control-label">头条主图片：</label>
  <div class="col-md-6">
       <img ng-src="{{info.header_photo}}" width="100%" height="200" ng-model="info.header_photo">
@@ -48,7 +57,7 @@
           </li>
         </ul>
  </div>
- </div>
+ </div> -->
 
 
  <div class="form-group">
