--- a/app/22busscustomer/views/addprize.html
+++ b/app/22busscustomer/views/addprize.html
@@ -23,7 +23,7 @@
    							<div>  
     							<input type = 'test' ng-change="changeKeyValue(searchField)" ng-model="searchField" style = 'display:block;width:200px' ng-click = 'hidden=!hidden' value="{{searchField}}"/></input>  
     							<div  ng-hide="hidden">  
-        							<select style = 'width:200px' ng-change="change(info.activeId)" ng-model="searchField" multiple>  
+        							<select style = 'width:200px' ng-change="change(x)" ng-model="x" multiple>  
             							<option ng-repeat="data in datas" >{{data}}</option>  
         							</select>  
     							</div>  
