--- a/app/22busscustomer/views/supplierlist.html
+++ b/app/22busscustomer/views/supplierlist.html
@@ -7,9 +7,9 @@
       <tr>
         <th class="col-md-1 text-center">供应商名称</th>
         <th class="col-md-1 text-center">联系人(电话)</th>
-        <th class="col-md-1 text-center">商品类别</th>
+        <th class="col-md-1 text-center">合作范围</th>
         <th class="col-md-2 text-center">供应商简介</th>
-        <th class="col-md-1 text-center">协助签约</th>
+        <th class="col-md-1 text-center">店铺类型</th>
         <th class="col-md-1 text-center">申请人(日期)</th>
         <th class="col-md-1 text-center">修改时间</th>
         <th class="col-md-1 text-center">确认人</th>
