--- a/app/22busscustomer/views/headline.html
+++ b/app/22busscustomer/views/headline.html
@@ -5,7 +5,7 @@
             <div class="col-sm-12">
                   <label for="inputLottry" class="control-label">商客头条</label>
                   <button type="button" class="btn btn-primary search pull-right" ng-click="addheadline()">添加头条文章</button>
-
+                  <!-- <button type="button" class="btn btn-primary search pull-right" ng-click="edit()">编辑头条文章</button> -->
 
             </div>
         </div>
@@ -28,9 +28,8 @@
         <td class="text-center">{{obj.creat_by}}</td>
         <td class="text-center">{{obj.creat_time}}</td>
         <td class="text-center">
-          <a ng-click="change(obj.id)" class="btn btn-info btn-xs">修改</a>
+          <a ng-click="edit(obj.id)" class="btn btn-info btn-xs">修改</a>
           <a ng-click="delete(obj.id)" class="btn btn-info btn-xs">删除</a>
-          <a ng-click="detail(obj.id,obj.title_identifier)" class="btn btn-info btn-xs">查看详情</a>
         </td>
       </tr>
     </tbody>
