--- a/app/07product/views/tktsalemodel.html
+++ b/app/07product/views/tktsalemodel.html
@@ -659,7 +659,7 @@
 </div>
 
 
-<div class="col-xs-12" ng-show="funobj.hasOwnProperty('shangke_price')" >
+<div class="col-xs-12" ng-show="funobj.hasOwnProperty('skprice')" >
 	<div class="panel panel-default form-horizontal">
 		<div class="panel-heading">
 			销售品分润设置<button type="button" 
